# playground

./: CMakeLists.txt  LICENSE  README.md
.github/actions/notify-push/: action.yml
.github/workflows/: push.yml
busybutton/: CMakeLists.txt
busybutton/example/: main.cc
busybutton/src/: busybutton.cc  busybutton.h
cppplay/: CMakeLists.txt  main.cpp
mode/: CMakeLists.txt  main.cc  mode.h
namespaced/: main.py
python-shm/: example.py  shm.py
strong-bool/: Makefile  README.md  example-1.cc  example-2.cc  example-3.cc  example-4.cc  example-5.cc  example-6.cc
